feat(calendar): integrate validation error handling in appointment views
Add validation error handling to appointment calendar and dialog:
- Handle ConstraintViolationException with proper notifications
- Use context-appropriate validation error display
- Improve code quality (transient fields, modern Java syntax)
- Add proper imports for validation utilities

Ensures validation errors are displayed consistently in calendar operations.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>